	--- 9.11.0-P2 released ---

4510.	[security]	Named mishandled some responses where covering RRSIG
			records are returned without the requested data
			resulting in a assertion failure. (CVE-2016-9147)
			[RT #43548]

4508.	[security]	Named incorrectly tried to cache TKEY records which
			could trigger a assertion failure when there was
			a class mismatch. (CVE-2016-9131) [RT #43522]

	--- 9.11.0-P1 released ---

4489.	[security]	It was possible to trigger assertions when processing
			a response. (CVE-2016-8864) [RT #43465]

	--- 9.11.0 released ---

	--- 9.11.0rc3 released ---

4471.	[cleanup]	Render client/query logging format consistent for
			ease of log file parsing. (Note that this affects
			"querylog" format: there is now an additional field
			indicating the client object address.) [RT #43238]

4470.	[bug]		Reset message with intent parse before
			calling dns_dispatch_getnext. [RT #43229]

	--- 9.11.0rc2 released ---

4468.	[bug]		Address ECS option handling issues. [RT #43191]

4467.	[security]	It was possible to trigger a assertion when rendering
			a message. (CVE-2016-2776) [RT #43139]

4466.	[bug]		Interface scanning didn't work on a Windows system
			without a non local IPv6 addresses. [RT #43130]

4465.	[bug]		Don't use "%z" as Windows doesn't support it.
			[RT #43131]

4464.	[bug]		Fix windows python support. [RT #43173]

4463.	[bug]		The dnstap system test failed on some systems.
			[RT #43129]

4462.	[bug]		Don't describe a returned EDNS COOKIE as "good"
			when there isn't a valid server cookie. [RT #43167]

4461.	[bug]		win32: not all external data was properly marked
			as external data for windows dll. [RT #43161]

	--- 9.11.0rc1 released ---

4460.	[test]		Add system test for dnstap using unix domain sockets.
			[RT #42926]

4459.	[bug]		TCP client objects created to handle pipeline queries
			were not cleaned up correctly, causing uncontrolled
			memory growth. [RT #43106]
