@@ -1,5 +1,9 @@
 	--- 9.11.0-P2 released ---
 
+4517.	[security]	Named could mishandle authority sections that were
+			missing RRSIGs triggering an assertion failure.
+			(CVE-2016-9444) [RT # 43632]
+
 4510.	[security]	Named mishandled some responses where covering RRSIG
 			records are returned without the requested data
 			resulting in a assertion failure. (CVE-2016-9147)
